# dynamixel_urdf

./: CMakeLists.txt  README.md  package.xml
urdf/: ax12.xacro  rx28.xacro  rx64.xacro
