<?xml version="1.0"?>
<package>
  <name>dynamixel_urdf</name>
  <version>0.0.0</version>
  <description>Meshes and urdf definitions for various dynamixel servos.</description>

  <maintainer email="dgossow@gmail.com">dgossow</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>